Rename AbstractReplicatedLogImpl
AbstractReplicatedLog better captures the intent, let's use that without
implying anything about ReplicatedLogImpl itself.

JIRA: CONTROLLER-2073
Change-Id: I14abc64495a92476258eb07c3f6915a77afbbf00
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>